--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## submodules...?
+submodules/
+
 ## vim files lol
 *~                                                                                                                                                                                                     
 *.swp
