ADD: GFD-Studio dependency and patches

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = external/XV2-Tools
 	url = https://github.com/LazyBone152/XV2-Tools.git
 	ignore = all
+[submodule "external/GFD-Studio"]
+	path = external/GFD-Studio
+	url = https://github.com/tge-was-taken/GFD-Studio.git
+	branch = master
