Startup + user data flow, basic EVT parsing, and main window skeleton.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## user data dir
+Local/
+
 ## vim files lol
 *~                                                                                                                                                                                                     
 *.swp
