--- a/src/EVTUI/EVTUI.csproj
+++ b/src/EVTUI/EVTUI.csproj
@@ -19,6 +19,7 @@
   <!-- Avalonia packages -->
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.10" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.10" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.10" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10" />
@@ -124,6 +125,7 @@
 
   <!-- Other packages -->
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="15.1.2" />
     <PackageReference Include="CriFsV2Lib" Version="2.1.2" />
     <PackageReference Include="LibVLCSharp" Version="3.8.2" />
     <PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
