Fixes for cross-compatible building and more robust storage of user data.

--- a/src/EVTUI/EVTUI.csproj
+++ b/src/EVTUI/EVTUI.csproj
@@ -2,6 +2,12 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+    <!-- this seems more efficient than the above but doesn't work when building for windows on linux -->
+    <!--IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract-->
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
