Startup + user data flow, basic EVT parsing, and main window skeleton. (#3)

--- a/src/EVTUI/EVTUI.csproj
+++ b/src/EVTUI/EVTUI.csproj
@@ -2,6 +2,12 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+    <!-- this seems more efficient than the above but doesn't work when building for windows on linux -->
+    <!--IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract-->
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -24,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="OpenTK.Graphics" Version="4.1"/>
     <PackageReference Include="Avalonia" Version="11.0.10" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.10" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.10" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10" />
@@ -126,6 +133,7 @@
 
   <!-- Other packages -->
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="15.1.2" />
     <PackageReference Include="CriFsV2Lib" Version="2.1.2" />
     <PackageReference Include="LibVLCSharp" Version="3.8.2" />
     <PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
