--- a/src/lib/EVTUI.Lib.csproj
+++ b/src/lib/EVTUI.Lib.csproj
@@ -50,6 +50,7 @@
   <!-- Other packages -->
   <ItemGroup>
     <PackageReference Include="YamlDotNet" Version="15.1.2" />
+    <PackageReference Include="DeepCopy" Version="1.0.3" />
     <PackageReference Include="CriFsV2Lib" Version="2.1.2" />
     <PackageReference Include="LibVLCSharp" Version="3.8.2" />
     <PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
