--- a/src/gui/EVTUI.csproj
+++ b/src/gui/EVTUI.csproj
@@ -28,6 +28,9 @@
 
   <!-- Avalonia packages -->
   <ItemGroup>
+    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.1.0" />
+    <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.10.0" />
+    <PackageReference Include="AvaloniaEdit.TextMate" Version="11.1.0" />
     <PackageReference Include="CalcBindingAva" Version="2.5.3" />
     <PackageReference Include="OpenTK.Graphics" Version="4.1" />
     <PackageReference Include="Avalonia" Version="11.0.10" />
@@ -38,6 +41,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
+    <PackageReference Include="TextMateSharp.Grammars" Version="1.0.63" />
     <!--PackageReference Include="ReactiveUI.Fody" Version="19.5.41" /-->
   </ItemGroup>
 
