--- a/src/gui/EVTUI.csproj
+++ b/src/gui/EVTUI.csproj
@@ -29,6 +29,7 @@
   <!-- Avalonia packages -->
   <ItemGroup>
     <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.1.0" />
+    <PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.0.10" />
     <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.10.0" />
     <PackageReference Include="AvaloniaEdit.TextMate" Version="11.1.0" />
     <PackageReference Include="CalcBindingAva" Version="2.5.3" />
