--- a/src/lib/EVTUI.Lib.csproj
+++ b/src/lib/EVTUI.Lib.csproj
@@ -31,6 +31,7 @@
   <!-- AtlusScriptLibrary packages -->
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime" Version="4.6.6" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="14.9.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
