--- a/src/lib/EVTUI.Lib.csproj
+++ b/src/lib/EVTUI.Lib.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="Antlr4.Runtime" Version="4.6.6" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="14.9.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Linq.AsyncEnumerable" Version="10.0.1" />
   </ItemGroup>
 
   <!-- GFDLibrary files -->
