--- a/src/gui/EVTUI.csproj
+++ b/src/gui/EVTUI.csproj
@@ -14,7 +14,7 @@
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <NoWarn>NU1605;NU1701;8500;8600;8601;8602;8603;8604;8612;8618;8619;8622;8625;8629;8714;8765;8767</NoWarn>
+    <NoWarn>NU1605;NU1701;8500;8600;8601;8602;8603;8604;8612;8618;8619;8622;8625;8629;8714;8765;8767;AVLN3001</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
